# rust-matrix

./: Cargo.toml  readme.md
assert_type_eq/: Cargo.toml  Readme.md
assert_type_eq/src/: lib.rs
matrix/: Cargo.toml  main.rs
matrix/benches/: dot.rs  dot_bench.rs  dot_bench_2.rs  dot_out.rs  matrix.rs
matrix/src/: lib.rs
matrix/tests/: matrix_ops.rs  sample.rs
