[package]
name = "matrix"
version = "0.1.0"
authors = ["mgj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
assert_type_eq = { path = "../assert_type_eq" }
typenum = "1.15.0"
generic-array = "0.13.2"


[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
# panic = 'unwind'    # This setting is always ignored.
incremental = true
# codegen-units = 16  # Note: ignored because `incremental` is enabled.
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 0
rpath = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
# codegen-units = 16  # Note: ignored because `incremental` is enabled.
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
# panic = 'unwind'    # This setting is always ignored.
incremental = false
codegen-units = 0
rpath = false